simplify the repo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 version: "3.7"
 services:
   site:
-    image: brugr/website:latest-alpine
+    image: nginx:alpine
     container_name: website
     ports:
       - '80:80'
-    restart: unless-stopped
-    labels:
-      - com.centurylinklabs.watchtower.enable="false"
+    volumes:
+      - ./site:/usr/share/nginx/html
